--- a/src/components/Item.css
+++ b/src/components/Item.css
@@ -31,25 +31,31 @@
     font-size: 16px;
     margin-bottom: 5px;
     text-align: center;
+    margin: 15px;
     
   }
   
   .ItemFooter {
     text-align: center;
+   
   }
   
   .Option {
-    background-color: #007bff;
+    background-color: #010101c9;
     color: #fff;
     border: none;
     border-radius: 5px;
-    padding: 10px 20px;
-    font-size: 16px;
+    font-size: 15px;
+    padding: 10px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    text-decoration: none;
+   
   }
   
   .Option:hover {
     background-color: #b35700;
   }
+
+
   
